@@ -291,13 +291,14 @@ class Catalog(Folder):
         for i, document in enumerate(documents):
             weight, doc_number = document
             document = Document(doc_number)
+            # Load the IDocument
+            if doc_number in self.added_documents:
+                doc_handler = self.added_documents[doc_number]
+            else:
+                doc_handler = self.get_handler('d%07d' % doc_number)
             # Get the stored fields
             for field in fields.fields:
                 if field.is_stored:
-                    if doc_number in self.added_documents:
-                        doc_handler = self.added_documents[doc_number]
-                    else:
-                        doc_handler = self.get_handler('d%07d' % doc_number)
                     stored_field = doc_handler.get_handler('s%d' %field.number)
                     setattr(document, field.name, stored_field.value)
             documents[i] = document
